# mimaki-gui

./: .gitattributes  .gitignore  INSTRUCTIONS.md  LICENSE  README.md  main.py  pyproject.toml  run.sh
app/: config.py
app/cam/: drill_cam.py  simple_cam.py
app/gui/: canvas.py  feed_calc_widget.py  main_window.py  object_panel.py  send_panel.py
app/gui/dialogs/: array_dialog.py  background_dialog.py  clone_dialog.py  comments_dialog.py  drill_dialog.py  dry_run_dialog.py  grid_dialog.py  job_log_dialog.py  preview_3d_dialog.py  ref_points_dialog.py  resume_dialog.py  scale_to_fit_dialog.py  send_from_dialog.py  serial_dialog.py  shape_wizard_dialog.py  simulation_dialog.py  source_preview_dialog.py  tool_library_dialog.py
app/io/: gcode_parser.py  hpgl_parser.py  hpgl_writer.py  job_log.py  project_io.py  serial_sender.py
app/model/: calibration.py  gcode_object.py  project.py  ref_point.py  saved_point.py  types.py  undo.py  zone.py
app/sim/: simulator.py
testfiles/: test01.nc
