[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mimaki-gui"
version = "0.1.0"
description = "GUI application for Mimaki ME-500 engraving/milling machine"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
    "pyserial>=3.5",
]

[project.scripts]
mimaki-gui = "main:main"

[tool.setuptools.packages.find]
where = ["."]
